raw vue project

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!--start paystack-->
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+    <!--end paystack-->
   </body>
 </html>
